# Omics_Project_CCSPR

./: .gitignore  LICENSE  Makefile  README.md  REPRODUCE.md  pyproject.toml  requirements-frozen.txt
configs/: cll_rs_scrna.yaml  cll_rs_scrna_ablation_safe.yaml  cll_rs_scrna_fasttrack.yaml  cll_rs_scrna_lowmem.yaml  cll_rs_scrna_manuscript_safe.yaml  cll_rs_scrna_tiny_sensitivity.yaml  cll_venetoclax.yaml  cll_venetoclax_bounded_ablation.yaml  geometry_paper.yaml  geometry_paper_local.yaml  geometry_paper_local_fast.yaml  geometry_paper_ultrafast.yaml  geometry_scrna_stronger.yaml  tcga_brca.yaml  tcga_luad.yaml
experiments/: aggregate_public_substitutes.py  build_full_paper_assets.py  generate_fast_diagnostics.py  run_arabidopsis.py  run_arabidopsis_enrichment.py  run_arabidopsis_genes_only.py  run_cll_rs_scrna.py  run_cll_rs_scrna_ablation_safe.py  run_cll_rs_scrna_manuscript_safe.py  run_cll_venetoclax.py  run_enrichment_analysis.py  run_geometry_comparison.py  run_geometry_family.py  run_geometry_runtime_profile.py  run_gurnari_style_figure.py  run_gurnari_style_figure_v2.py  run_lightweight_strengthen.py  run_luad_bio_diagnostics.py  run_luad_full_scale.py  run_luad_multiseed_geometry.py  run_luad_multiseed_stats.py  run_tcga_brca.py  run_tcga_luad.py
manuscript/: cc_spr_full_paper.md  cc_spr_full_paper.tex  cc_spr_full_supplement.tex  cc_spr_public_substitutes.md  cc_spr_public_substitutes.tex
manuscript_claude/: cc_spr_biology_explainer.tex  cc_spr_final_geometry_complete.tex  cc_spr_final_geometry_complete_supplement.tex  cc_spr_final_merged.tex  (+4 more)
(+101 files in other folders)
